Seperated history and calculator component

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body style="overflow-x: hidden">
     <div id="app"></div>
+    <script type="module" src="/src/store.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
